--- a/DIMS-Core/DIMS-Core.Tests/DIMS-Core.Tests.csproj
+++ b/DIMS-Core/DIMS-Core.Tests/DIMS-Core.Tests.csproj
@@ -11,12 +11,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DIMS-Core.BusinessLayer\DIMS-Core.BusinessLayer.csproj" />
+    <ProjectReference Include="..\DIMS-Core.Common\DIMS-Core.Common.csproj" />
+    <ProjectReference Include="..\DIMS-Core.DataAccessLayer\DIMS-Core.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\DIMS-Core.Identity\DIMS-Core.Identity.csproj" />
+    <ProjectReference Include="..\DIMS-Core.Logger\DIMS-Core.Logger.csproj" />
     <ProjectReference Include="..\DIMS-Core.Mailer\DIMS-Core.Mailer.csproj" />
+    <ProjectReference Include="..\DIMS-Core\DIMS-Core.csproj" />
   </ItemGroup>
 
 </Project>
